--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "primeiro-projeto",
   "version": "0.0.0",
+  "engines": {
+    "node": "18.12.1"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
